make the timestamp's filed readonly on the dialog

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -228,7 +228,7 @@
                     })
                 },
                 isReadOnlyOnDialog(key) {
-                    const keys = ['type', 'status', 'flag']
+                    const keys = ['timestamp', 'type', 'status', 'flag']
                     return keys.includes(key)
                 },
                 isHiddenOnDialog(key) {
