Add documentation in home page

--- a/supercon2/templates/index.html
+++ b/supercon2/templates/index.html
@@ -46,9 +46,8 @@
         <div class="modal-body row">
             <div class="col-md-4">
                 <ul>
-{#                    <li><a href="{{ url_for('supercon.get_manual_database') }}">Manually extracted database</a></li>#}
+                    <li><a href="https://github.com/lfoppiano/supercon2">Documentation</a></li>
                     <li><a href="{{ url_for('supercon.get_automatic_database') }}">Database</a></li>
-{#                    <li><a href="https://supercon2.readthedocs.io">Documentation [TBD]</a></li>#}
                     <li><a href="{{ url_for('supercon.get_stats') }}">Statistics</a></li>
                     <li><a href="{{ url_for('supercon.get_training_data') }}">Training data management</a></li>
                     <li><a href="http://falcon.nims.go.jp/superconductors" target="_blank">Grobid superconductors</a>
@@ -59,7 +58,7 @@
                 <strong>Work in progress.</strong>
 
                 <p>
-                    This database is an application to extract automatically superconductors material and
+                    This database was created automatically by extracting superconductors material and
                     their properties from superconductors-related scientific literature.
                 </p>
                 <p>
