--- a/supercon2/templates/index.html
+++ b/supercon2/templates/index.html
@@ -46,11 +46,12 @@
         <div class="modal-body row">
             <div class="col-md-4">
                 <ul>
-                    <li><a href="https://github.com/lfoppiano/supercon2">Documentation</a></li>
+                    <li><a href="https://github.com/lfoppiano/supercon2/blob/develop/README.md">Documentation</a></li>
                     <li><a href="{{ url_for('supercon.get_automatic_database') }}">Database</a></li>
                     <li><a href="{{ url_for('supercon.get_stats') }}">Statistics</a></li>
                     <li><a href="{{ url_for('supercon.get_training_data') }}">Training data management</a></li>
                     <li><a href="http://falcon.nims.go.jp/superconductors" target="_blank">Grobid superconductors</a>
+                    <li><a href="https://github.com/lfoppiano/supercon2">GitHub repository</a></li>
                     </li>
                 </ul>
             </div>
