--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -31,25 +31,11 @@
                         <td v-for="header in showHeaders" :key="header.value">
                             <v-radio-group v-model="header.filterKeyword" v-if="header.value === 'type'" dense
                                 hide-details>
-                                <v-row class="pb-2">
-                                    <v-radio dense value="all" class="ma-0">
+                                <v-row class="pb-2" v-for="radio in headerObject.type.radioGroup">
+                                    <v-radio dense :value="radio.value" class="ma-0">
                                     </v-radio>
-                                    <v-icon small title="all" @click="header.filterKeyword = 'all'">
-                                        mdi-filter-off
-                                    </v-icon>
-                                </v-row>
-                                <v-row class="pb-2">
-                                    <v-radio dense value="manual" class="ma-0">
-                                    </v-radio>
-                                    <v-icon small title="manual" @click="header.filterKeyword = 'manual'">
-                                        mdi-human
-                                    </v-icon>
-                                </v-row>
-                                <v-row class="pb-2">
-                                    <v-radio dense value="automatic" class="ma-0">
-                                    </v-radio>
-                                    <v-icon small title="automatic" @click="header.filterKeyword = 'automatic'">
-                                        mdi-robot
+                                    <v-icon small :title="radio.value" @click="header.filterKeyword = radio.value">
+                                        [[ radio.icon ]]
                                     </v-icon>
                                 </v-row>
                             </v-radio-group>
@@ -182,7 +168,19 @@
                         { text: 'Journal', value: 'journal', hidden: true, filter: this.journalFilter, filterKeyword: '', shouldHideEmpty: false },
                         { text: 'Year', value: 'year', hidden: false, filter: this.yearFilter, filterKeyword: '', shouldHideEmpty: false },
                         // CONFIRM: check column locations for type, status and flag
-                        { text: 'Type', value: 'type', hidden: false, filter: this.typeFilter, filterKeyword: 'all' },
+                        {
+                            text: 'Type', value: 'type', hidden: false, filter: this.typeFilter, filterKeyword: 'all',
+                            radioGroup: [{
+                                value: 'all',
+                                icon: 'mdi-filter-off'
+                            }, {
+                                value: 'manual',
+                                icon: 'mdi-human'
+                            }, {
+                                value: 'automatic',
+                                icon: 'mdi-robot'
+                            },]
+                        },
                         { text: 'Status', value: 'status', sortable: false, hidden: false, filter: this.statusFilter, filterKeyword: 'all' },
                         { text: 'Flag', value: 'flag', sortable: false, hidden: false, filter: this.flagFilter, filterKeyword: 'all' },
                         { text: 'Actions', value: 'actions', sortable: false, hidden: false },
